--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,6 +10,7 @@
   -ms-overflow-style: none; /* Internet Explorer 10+ */
   scrollbar-width: none; /* Firefox */
 }
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -79,4 +80,9 @@
     text-decoration: line-through;
     text-decoration-color: red;
   }
+}
+* {
+  outline: 3px solid rgba(255, 0, 0, 0.3) !important; /* İnce, yarı saydam kırmızı outline */
+  /* VEYA Farklı bir stil deneyebilirsin: */
+  /* outline: 1px dotted blue !important; */
 }
